--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "electron-builder build --mac --win --publish never",
+    "deploy": "electron-builder build --mac --win --publish always"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +17,9 @@
   },
   "dependencies": {
     "electron-updater": "^4.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/miloch91/electron_auto_update_test.git"
   }
 }
